<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".userPhysicalFragment">

    <EditText
        android:id="@+id/age"
        style="@style/userFragment"
        android:layout_marginTop="200dp"
        android:text="@string/age"/>

    <EditText
        android:id="@+id/gender"
        android:text="@string/gender"
        android:layout_marginTop="275dp"
        style="@style/userFragment"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_physical_button"
        android:textColor="@color/black"
        android:text="@string/save"
        android:backgroundTint="@color/white"
        android:layout_marginTop="405dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="75dp"/>

</FrameLayout>