<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".userNameFragment">

    <EditText
        android:id="@+id/userName_editText"
        style="@style/userFragment"
        android:layout_marginTop="200dp"
        android:text="@string/edit_text_name"/>

    <EditText
        android:id="@+id/userSecondName"
        android:text="@string/edit_tex_second_name"
        android:layout_marginTop="275dp"
        style="@style/userFragment"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_save_info"
        android:backgroundTint="@color/white"
        android:layout_marginTop="375dp"
        android:text="@string/save_info"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="75dp"/>

</FrameLayout>